--- a/config/tconstruct.cfg
+++ b/config/tconstruct.cfg
@@ -10,10 +10,10 @@ clientside {
     B:extraTooltips=true
 
     # If true all variants of the different tables will be listed in creative. Set to false to only have the oak variant for all tables.
-    B:listAllTables=true
+    B:listAllTables=false
 
     # If true all material variants of the different parts, tools,... will be listed in creative. Set to false to only have the first found material for all items (usually wood).
-    B:listAllMaterials=true
+    B:listAllMaterials=false
 
     # If true tools will enable the forge bucket model on startup and then turn itself off. This is only there so that a fresh install gets the buckets turned on by default.
     B:enableForgeBucketModel=false
@@ -49,7 +49,7 @@ gameplay {
     B:obsidianAlloy=true
 
     # Determines the ratio of ore to ingot, or in other words how many ingots you get out of an ore. This ratio applies to all ores (including poor and dense). The ratio can be any decimal, including 1.5 and the like, but can't go below 1. THIS ALSO AFFECTS MELTING TEMPERATURE!
-    D:oreToIngotRatio=2.0
+    D:oreToIngotRatio=1.0
 
     # Enables all items, even if the Module needed to obtain them is not active
     B:registerAllItems=false
