--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -30,7 +30,7 @@ anchors {
     # Entry Format: <modid>:<itemname>#<metadata>=<value>
     # Example: personal.fuel= minecraft:ender_pearl=12, minecraft:coal#0=4
     # 
-    S:passive.fuel=minecraft:ender_pearl=12
+    S:passive.fuel=minecraft:ender_pearl=
 
     # 
     # change to personal.craftable=false to disable Personal Anchor crafting, they will still be available via Creative
@@ -214,13 +214,11 @@ recipes {
             # 
             # change to 'bronze=false' to disable the bronze recipe for minecarts
             # 
-            B:bronze=true
-
+            B:bronze=false
             # 
             # change to 'steel=false' to disable the steel recipe for minecarts
             # 
-            B:steel=true
-
+            B:steel=false
             # 
             # change to 'vanilla.furnace=false' to disable the Furnace Minecart recipe
             # 
@@ -456,7 +454,7 @@ tweaks {
             # 
             # change to 'allowLiquids=true' to allow you put cans/capsules in Chest Carts
             # 
-            B:allowLiquids=false
+            B:allowLiquids=true
         }
 
         bore {
@@ -553,23 +551,18 @@ worldgen {
         B:firestone=true
 
         # Copper Mine, spawns a cloud of ore over a large but localized region
-        B:mineCopper=true
-
+        B:mineCopper=false
         # Gold Mine, spawns a cloud of ore over a large but localized region
-        B:mineGold=true
+        B:mineGold=false
 
         # Iron Mine, spawns a cloud of ore over a large but localized region
-        B:mineIron=true
-
+        B:mineIron=false
         # Lead Mine, spawns a cloud of ore over a large but localized region
-        B:mineLead=true
-
+        B:mineLead=false
         # Silver Mine, spawns a cloud of ore over a large but localized region
-        B:mineSilver=true
-
+        B:mineSilver=false
         # Tin Mine, spawns a cloud of ore over a large but localized region
-        B:mineTin=true
-
+        B:mineTin=false
         # spawns on the surface in forests
         B:quarried.stone=true
 
