--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -107,13 +107,13 @@ builder {
     B:oldSphereCylinderShape=false
 
     # If true we allow quarry cards to be crafted
-    B:quarryAllowed=true
+    B:quarryAllowed=false
 
     # The base speed (number of blocks per tick) of the quarry
     I:quarryBaseSpeed=8
 
     # If true the quarry will chunkload a chunk at a time. If false the quarry will stop if a chunk is not loaded
-    B:quarryChunkloads=true
+    B:quarryChunkloads=false
 
     # If true the quarry replace with cobblestone instead of dirt
     B:quarryCobble=false
@@ -122,10 +122,10 @@ builder {
     I:quarryInfusionSpeedFactor=20
 
     # If true the quarry will also quarry tile entities. Otherwise it just ignores them
-    B:quarryTileEntities=true
+    B:quarryTileEntities=false
 
     # If true we allow shape cards to be crafted. Note that in order to use the quarry system you must also enable this
-    B:shapeCardAllowed=true
+    B:shapeCardAllowed=false
 
     # If true a holo hud with current progress is shown above the builder
     B:showProgressHud=true
@@ -140,7 +140,7 @@ builder {
     I:spaceProjectorRFPerTick=1000
 
     # Can Tile Entities be moved? 'forbidden' means never, 'whitelist' means only whitelisted, 'blacklist' means all except blacklisted, 'allowed' means all
-    S:tileEntityMode=whitelist
+    S:tileEntityMode=forbidden
 
     # The RF per operation of the builder is multiplied with this factor when using the void shape card
     D:voidShapeCardFactor=0.5
@@ -155,7 +155,7 @@ builder {
 
 coalgen {
     # Amount of RF generated per tick
-    I:generatePerTick=60
+    I:generatePerTick=10
 
     # RF per tick that the generator can charge items with
     I:generatorChargePerTick=1000
@@ -381,16 +381,16 @@ general {
     I:dimensionalShardRecipeWithoutDimensions=2
 
     # Enable the block protector recipe.
-    B:enableBlockProtectorRecipe=true
+    B:enableBlockProtectorRecipe=false
 
     # Enable the builder recipe.
-    B:enableBuilderRecipe=true
+    B:enableBuilderRecipe=false
 
     # Enable the dialing device recipe.
     B:enableDialingDeviceRecipe=true
 
     # Enable the endergenic generator recipe.
-    B:enableEndergenRecipe=true
+    B:enableEndergenRecipe=false
 
     # Enable the matter receiver recipe.
     B:enableMatterReceiverRecipe=true
@@ -399,7 +399,7 @@ general {
     B:enableMatterTransmitterRecipe=true
 
     # Enable the shield projector recipe.
-    B:enableShieldProjectorRecipe=true
+    B:enableShieldProjectorRecipe=false
 
     # If true dump a lot of logging information about various things in RFTools. Useful for debugging.
     B:logging=false
